fixed rendering on ios

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 
 .title {
     text-align: center;
-    align-self: center;
-    justify-self: center;
+    align-self: center !important;
+    justify-self: center !important;
     font-size: 34px;
     font-family: 'Oswald', sans-serif;
     color: #0130AA;
@@ -20,6 +20,7 @@ body {
     height: 520px;
     align-self: center;
     justify-self: center;
+    margin: 0 auto;
     animation: appear 0.5s ease-in-out;
 }
 
@@ -140,9 +141,12 @@ a:visited {
 
 @media (max-width: 550px) {
     .table {
-        width: 300px;
-        height: 300px;
+        width: 60vw;
+        height: 60vw;
+        margin: 0 auto;
         font-size: 14px;
+        max-width: 300px;
+        max-height: 300px;
     }
 
     .info-text {
